Add image to atole webpage Add description of recipe to atole webpage Add ingredients to atole webpage Add directions to atole webpage

--- a/recipes/atole.html
+++ b/recipes/atole.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Atole</h1>
+        <img src="../images/atole-image.jpg">
+        <h2><em>Classic beverage for the colder months.</em></h2>
+        <p>Atole is a popular Mexican hot beverage, thickened with masa and flavored with cinnamon and brown sugar. Try this soothing beverage after dinner or in the afternoon with some cookies. You can be creative and add some pureed fruit if you wish!</p>
+        
+        <h2><strong>Ingredients</strong></h2>
+        <ul>
+          <li>1/2 cup masa (<em>corn flour</em>)</li>
+          <li>5 cups water</li>
+          <li>1 tablespoon ground cinnamon</li>
+          <li>5 tablespoons piloncillo (<em>brown sugar cones</em>)</li>  
+          <li>1 tablespoon vanilla extract</li>
+        </ul>
+
+        <h2><strong>Direction</strong></h2>
+        <ol>
+          <li>Place the masa, water, cinnamon and piloncillo in a blender. Blend until smooth, about 3 minutes.</li>
+          <li>Pour the contents of the blender into a sauce pan and bring the mixture to boil over medium heat, stirring constantly. When the mixture reaches a boil, turn the heat to low and continue to whisk for 5 minutes.</li>
+          <li>Remove the pan from the heat and stir in the vanilla. Pour into mugs and serve hot</li>
+        </ol>
 </body>
 </html>
