Add image to hibiscus water webpage Add description of recipe to hibiscus water webpage Add ingredients to hibiscus water webpage Add directions to hibiscus water webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-            <a href="atole.html">Atole</a>
+            <p><a href="../odin-recipes/recipes/atole.html">Atole</a></p>
+            
+            <p><a href="../odin-recipes/recipes/hibiscus-water.html">Hibiscus Water</a></p>
     </body>
 </html>
