Create recipe page 'Hibiscus Water' Create recpie page 'Horchata' Add link to hibiscus-water.html in index.html Add link to horchata.html in index html Add image to horchata webpage Add description of recipe to horchata webpage Add ingredients to horchata webpage Add directions to horchata webpage

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
             <p><a href="../odin-recipes/recipes/atole.html">Atole</a></p>
             
             <p><a href="../odin-recipes/recipes/hibiscus-water.html">Hibiscus Water</a></p>
+
+            <p><a href="../odin-recipes/recipes/horchata.html">Horchata</a></p>
     </body>
 </html>
